<resources>
    <!-- General -->
    <string name="app_name">Bundle-Express</string>
    <string name="menu_settings">Settings</string>

    <!-- Titles -->
    <string name="title_activity_main">Bundle Express</string>
    <string name="title_activity_gateway_data">GatewayData</string>
    <string name="title_activity_config_editor">Configuration</string>
    <string name="title_activity_web_data">Web Data</string>
    <string name="title_activity_daemon_config">Daemon Configuration</string>
    <string name="title_activity_bundle_statistics">Bundle Statistics</string>
    <string name="title_activity_web_data_content">Sensor Data</string>
    <string name="title_activity_sensor_list">Sensor List</string>

	<!-- TextView texts -->    
    <string name="webDataStatus">Web Data</string>
    <string name="bundleStatistics">Bundle Statistics</string>
    <string name="storageSpaceLimit">Space limit</string>
    <string name="routingName">Routing Type</string>
    <string name="staticRouting">Static</string>
    <string name="epidemicRouting">Epidemic</string>
    <string name="prophetRouting">ProPHET</string>
    <string name="ServerEndpointID">Server EID</string>
    <string name="LocalEndpointID">Local EID</string>
    <string name="webServerUrl">Web server URL</string>
    <string name="serverAddress">Server address</string>
    <string name="BundleStatus">Bundle Statistics</string>
    <string name="AndroidService">Activate Android Service</string>

    <!-- Buttons text -->
    <string name="configSave">Save</string>
    <string name="configCancel">Cancel</string>

    <!-- Statistics -->
    <string name="bundleForwardCounter">Stored bundles</string>
    <string name="bundleCounterSent">Transmitted bundles</string>
    <string name="bundleCounterReceived">Received bundles</string>
    <string name="storageUsage">Storage usage [bytes]</string>
    
    <!-- Configuration -->
    <string-array name="StorageSelection">
        <item>Phone</item>
        <item>SD Card</item>
    </string-array>
    
    <string-array name="RoutingSelection">
        <item>Static</item>
        <item>Epidemic</item>
        <item>ProPHET</item>
    </string-array>
    <string name="defaultWebServerUrl">http://lakka.se:8080/WSN-web/HTTPServlet</string>
    <string name="defaultServerEid">dtn://server.dtn</string>
    <string name="defaultLocalEid">dtn://phone.dtn</string>
    <string name="defaultServerAddress">www.server.com:4556</string>
    <string name="SpaceUnit">megabytes</string>
    
    <!-- Data specific -->
    <string name="SensorTemp">"Temperature: "</string>
    <string name="unixTime">Unix Time:</string>
    <string name="PowerSaveIndicator">Power Save Indicator:</string>
    <string name="VoltageIn">Voltage In:</string>
    <string name="storageName">Storage Type</string>
    <string name="relativeHumidity">Relative Humidity :</string>
    <string name="upTime">Up Time :</string>
    <string name="mcTemp">M_Temperature :</string>
    <string name="mcVolt">M_Voltage :</string>

</resources>