<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp" >
        
        
    <TextView
        android:id="@+id/unixTimestamp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"/>
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         
       <TextView
       	   android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:text="@string/SensorTemp" />
   
   	 	<TextView
       	 android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"/>
     
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="left"
          android:paddingLeft="30dp"
          android:text="@string/unixTime" />
     
      <TextView
        android:id="@+id/unixTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"/>
      
      </LinearLayout>
      
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
      
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:text="@string/PowerSaveIndicator" />
      
         <TextView
        android:id="@+id/powerSaveIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:paddingLeft="15dp"
             android:text="@string/VoltageIn" />
         
         <TextView
        android:id="@+id/vIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"/>
   </LinearLayout>
         
     
     
   <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
      
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:text="@string/relativeHumidity" />
      
         <TextView
        	android:id="@+id/rhumidity"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"/>
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:paddingLeft="15dp"
             android:text="@string/upTime" />
         
         <TextView
       		android:id="@+id/upTime"
        	android:layout_width="match_parent"
       	 	android:layout_height="wrap_content"
        	android:gravity="left"/>
         
         
         
         </LinearLayout>
         
     
     
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
      
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:text="@string/mcTemp" />
      
         <TextView
        android:id="@+id/mTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left"
             android:paddingLeft="35dp"
             android:text="@string/mcVolt" />
         
         <TextView
        android:id="@+id/mVolt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"/>
    </LinearLayout>
         

 </LinearLayout>